--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -133,7 +133,7 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
         The user must have the following privileges for the PCF Event Alerts database:
         <code>ALTER</code>, <code>CREATE</code>, <code>DELETE</code>, <code>DROP</code>, <code>INDEX</code>,
         <code>INSERT</code>, <code>LOCK TABLES</code>, <code>REFERENCES</code>, <code>SELECT</code>, and <code>UPDATE</code>.
-        <p class="note warning"><strong>WARNING</strong>: Do not delete the user that connects to the database.
+        <p class="note warning"><strong>Warning</strong>: Do not delete the user that connects to the database.
            You can change the username, but the original user cannot be deleted. If the user is deleted, MySQL errors out.
          </p>
       <tr>
@@ -156,7 +156,7 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
       <tr>
         <td><strong>Skip MySQL tls validation</strong></td>
         <td>Check this option if no tls hostname validation is desired.
-        <p class="note"><strong>NOTE</strong>: Currently, when Google Cloud Platform SQL with mutual tls is used,
+        <p class="note"><strong>Note</strong>: Currently, when Google Cloud Platform SQL with mutual tls is used,
         this option has to be checked. The certificate on the MySQL server does not contain any IP SANs to validate the server ip
         address provided.
         </td>
@@ -201,8 +201,8 @@ Follow the steps below to configure settings for Event Alerts email notification
       <tr>
         <td><strong>SMTP Server Credentials</strong></td>
         <td>The Username and Password for the outgoing email account.
-          To connect to a SMTP server without authentication, leave the SMTP
-          username and password fields empty.
+          <p class="note"><strong>Note: </strong>To connect to a SMTP server without authentication, leave the SMTP
+          username and password fields empty.</p>
         </td>
       </tr>
     </table>
