--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -120,7 +120,7 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
       </tr>
       <tr>
         <td><strong>MySQL Host</strong></td>
-        <td>Enter the external MySQL database hostname/ip address.</td>
+        <td>Enter the external MySQL database hostname or IP address.</td>
       </tr>
       <tr>
         <td><strong>MySQL Port</strong></td>
@@ -146,25 +146,29 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
       </tr>
       <tr>
         <td><strong>Enable MySQL TLS</strong></td>
-        <td>Check this option if the external MySQL database require TLS or mutual TLS.</td>
+        <td>Select this option if the external MySQL database requires TLS or mutual TLS.</td>
       </tr>
       <tr>
         <td><strong>MySQL Server CA Cert</strong></td>
-        <td>Enter the external MySQL database CA certificate. This field is required if the certificate used by the external
-        MySQL database is self-signed, or check Skip MySQL tls validation below to skip hostname validation.</td>
+        <td>Enter the CA certificate for the external MySQL database.<br>
+          This field is required if the certificate used by the external MySQL
+          database is self-signed.
+          If you do not require TLS hostname validation, select <strong>Skip MySQL TLS Validation</strong> below.</td>
       </tr>
       <tr>
-        <td><strong>Skip MySQL tls validation</strong></td>
-        <td>Check this option if no tls hostname validation is desired.
-        <p class="note"><strong>Note</strong>: Currently, when Google Cloud Platform SQL with mutual tls is used,
-        this option has to be checked. The certificate on the MySQL server does not contain any IP SANs to validate the server ip
-        address provided.
+        <td><strong>Skip MySQL TLS Validation</strong></td>
+        <td>Select this option if you do not require TLS hostname validation.
+        <p class="note"><strong>Note</strong>: If you are using Google Cloud Platform
+          SQL with mutual TLS, you must select this option.
+          The certificate on the MySQL server does not contain any IP
+          <!-- spell out SAN -->
+          SANs to validate the server IP address provided.
         </td>
       </tr>
       <tr>
         <td><strong>MySQL Client Certificate and Private Keys</strong></td>
         <td>Enter the external MySQL database client certificate and private key.<br>
-        The fields are required if the server requires mutual TLS.</td>
+        These fields are required if the server requires mutual TLS.</td>
       </tr>
     </table>
 
