Spell out SAN [#165028053]]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -161,8 +161,7 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
         <p class="note"><strong>Note</strong>: If you are using Google Cloud Platform
           SQL with mutual TLS, you must select this option.
           The certificate on the MySQL server does not contain any IP
-          <!-- spell out SAN -->
-          SANs to validate the server IP address provided.
+          Subject Alternative Names (SANs) to validate the server IP address provided.
         </td>
       </tr>
       <tr>
