--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -133,7 +133,7 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
         The user must have the following privileges for the PCF Event Alerts database:
         <code>ALTER</code>, <code>CREATE</code>, <code>DELETE</code>, <code>DROP</code>, <code>INDEX</code>,
         <code>INSERT</code>, <code>LOCK TABLES</code>, <code>REFERENCES</code>, <code>SELECT</code>, and <code>UPDATE</code>.
-        <p class="note warning"><strong>WARNING</strong>: Do not delete the user that connects to the database.
+        <p class="note warning"><strong>Warning</strong>: Do not delete the user that connects to the database.
            You can change the username, but the original user cannot be deleted. If the user is deleted, MySQL errors out.
          </p>
       <tr>
