update the release note for future release
[#163917558]

Signed-off-by: Huan Wang <huwang@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -2,6 +2,19 @@
 title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
+##<a id="ver-1-2-7"></a> v1.2.7
+
+**Release Date: April 15, 2019**
+
+### <a id="features127"></a> Features
+
+New features and changes in this release:
+
+* Adds support for proxy settings. For more information about configuring proxy settings, see [Configuring Proxy Settings for All Applications
+](https://docs.pivotal.io/pivotalcf/opsguide/config-proxy.html).
+* Improves log error messages when alerts fail to send.
+* Adds option to disable Metrics Forwarder integration.
+
 ##<a id="ver-1-2-6"></a> v1.2.6
 
 **Release Date: December 7, 2018**
