Remove images that quickly grow outdated
[#165136321]

Signed-off-by: Melena Suliteanu <msuliteanu@pivotal.io>

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -32,8 +32,6 @@ This adds the tile to your staging area.
 
 1. Click the newly added **PCF Event Alerts** tile in orange to open its configuration panes.
 
-    ![Configuration Panes](images/config-panes.png)
-
 ## <a id="config-tile"></a> Configure the Tile
 
 Follow the stops below to configure the PCF Event Alerts tile.
@@ -43,7 +41,6 @@ Follow the stops below to configure the PCF Event Alerts tile.
 Follow the steps below to choose an Availability Zone (AZ) to run PCF Event Alerts and to select networks.
 
 1. Click the **Assign AZs and Networks** tab. 
-  ![AZ and Network Assignments Section](images/azs-and-network.png)
 
 1. Configure the fields as follows:
   <table class="nice">
@@ -97,7 +94,6 @@ follow the steps below.
 1. Click the **MySQL Settings** tab.
 
 1. Select **Pivotal MySQL Service** and enter the service plan to use. For example, `db-small`.
-  ![MySQL Settings Service Option](images/mysql-settings-service.png)
 
 1. Click **Save**.
 
@@ -151,8 +147,8 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
 1. Click the **Stemcell** tab.
 
 1. Verify the settings. If PCF Event Alerts cannot detect a stemcell TGZ file, 
-a message similar to the following appears (the version numbers shown may be different):
-    ![Stemcell Section](images/stemcell.png)
+the option to **Import Stemcell** will appear.
+
     If you need to upload a stemcell, do the following:
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
