Split out separate fields in MySQL table [#165028053]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -165,9 +165,14 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
         </td>
       </tr>
       <tr>
-        <td><strong>MySQL Client Certificate and Private Keys</strong></td>
-        <td>Enter the external MySQL database client certificate and private key.<br>
-        These fields are required if the server requires mutual TLS.</td>
+        <td><strong>MySQL Client Certificate</strong></td>
+        <td>Enter the external MySQL database client certificate.<br>
+        This field is required if the server requires mutual TLS.</td>
+      </tr>
+      <tr>
+        <td><strong>Private Keys</strong></td>
+        <td>Enter the external MySQL database private key.<br>
+        This field is required if the server requires mutual TLS.</td>
       </tr>
     </table>
 
