--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: PCF Event Alerts 
+title: PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
@@ -7,7 +7,7 @@ This documentation describes PCF Event Alerts.
 
 ## <a id='overview'></a>Overview
 
-As a PCF admin, you may want to receive notifications about important events that occur on your system. 
+As a PCF admin, you may want to receive notifications about important events that occur on your system.
 The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
 Notification topics are monitored by publishers---PCF components that emit events.
@@ -16,7 +16,7 @@ You can send these notifications using email, Slack, or webhook integration.
 For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
-PCF users with admin permissions can run event alert commands and subscribe to alerts. 
+PCF users with admin permissions can run event alert commands and subscribe to alerts.
 Admins can configure event alerts using the Cloud Foundry Command Line Interface (cf CLI) tool.
 
 ## <a id='features'></a>Key Features
@@ -39,7 +39,7 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.3.x</td>
+        <td>1.3.x</td>
     </tr>
     <tr>
         <td>Release date</td>
@@ -47,15 +47,15 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v2.1.x and v2.2.x</td>
+        <td>2.2, 2.3, 2.4, and 2.5</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>v2.1.x and v2.2.x</td>
+        <td>2.2, 2.3, 2.4, and 2.5</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
-        <td>v1.3.x</td>
+        <td>1.3</td>
     </tr>
     <tr>
         <td>MySQL</td>
