--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -25,7 +25,7 @@ You must have the following in order to install PCF Event Alerts:
 
 Follow the procedures below to download and install the PCF Event Alerts tile:
 
-1. Download the product file from [Pivotal Network](https://network.pivotal.io/).
+1. Download the product file from [Pivotal Network](https://network.pivotal.io/products/p-event-alerts/).
 
 1. Navigate to the Ops Manager Installation Dashboard and click **Import a Product** to upload the product file.
 
