Add information about log_bin_trust_function_creators to docs
[#165831039]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -16,7 +16,7 @@ New features and changes in this release:
 
 This release has the following issues:
 
-+ **External MySQL Database Migrations Fail:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand can fail when migrating external MySQL databases. For instructions on solving this issue, see [External MySQL Database Migrations Fail](./troubleshooting.html#mysql). 
+**External MySQL Database Migrations Fail:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand can fail when migrating external MySQL databases. For instructions on solving this issue, see [External MySQL Database Migrations Fail](./troubleshooting.html#mysql). 
 
 ## <a id="view"></a> View Release Notes for Another Version
 
