--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -12,11 +12,11 @@ owner: PCF Event Alerts
 
 New features and changes in this release:
 
-### <a id="known130"></a> Known Issues
+### <a id="known130"></a> Known Issue
 
-This release has the following issues:
+This release has the following issue:
 
-**External MySQL Database Migrations Fail:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand can fail when migrating external MySQL databases. For instructions on solving this issue, see [External MySQL Database Migrations Fail](./troubleshooting.html#mysql). 
++ **External MySQL Database Migrations Fail:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand can fail when migrating external MySQL databases. For instructions on solving this issue, see [External MySQL Database Migrations Fail](./troubleshooting.html#mysql). 
 
 ## <a id="view"></a> View Release Notes for Another Version
 
