--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -16,7 +16,8 @@ New features and changes in this release:
 
 This release has the following issue:
 
-+ **External MySQL Database Migrations Fail:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand can fail when migrating external MySQL databases. For instructions on solving this issue, see [External MySQL Database Migrations Fail](./troubleshooting.html#mysql). 
++ **Deploy PCF Event Alerts errand fails:** If you have binary logging enabled, the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, PCF Event Alerts is not deployed. For instructions on solving this issue, 
+see [External MySQL Database Migrations Fail](./troubleshooting.html#mysql). 
 
 ## <a id="view"></a> View Release Notes for Another Version
 
