--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -64,7 +64,7 @@ If you do not resolve this issue, PCF Event Alerts is not deployed.
 
 ####Symptom
 
-When you **Apply Changes***, you see in the Ops Manager installation pane that the **Deploy PCF Event Alerts** errand fails with the following error:
+When you **Apply Changes**, you see in the Ops Manager installation pane that the **Deploy PCF Event Alerts** errand fails with the following error:
 
 ```
 You do not have the SUPER privilege and 
