--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -4,7 +4,7 @@ owner: PCF Event Alerts
 ---
 ##<a id="ver-1-2-7"></a> v1.2.7
 
-**Release Date: April 15, 2019**
+**Release Date: XXX XX, 2019**
 
 ### <a id="features127"></a> Features
 
@@ -13,7 +13,11 @@ New features and changes in this release:
 * Adds support for proxy settings. For more information about configuring proxy settings, see [Configuring Proxy Settings for All Applications
 ](https://docs.pivotal.io/pivotalcf/opsguide/config-proxy.html).
 * Improves log error messages when alerts fail to send.
-* Adds option to disable Metrics Forwarder integration.
+* Adds option to disable Metrics Forwarder for PCF integration.
+
+### <a id="known127"></a> Known Issues
+
+There are no known issues for this release:
 
 ##<a id="ver-1-2-6"></a> v1.2.6
 
